Ensure all contents are within app UI
General UX/UI improvements:

- Ensure buttons in response pane is not cut off
- Rearrange buttons in HTTP/2 entry form
- Use different button for SSE in HTTP/2

--- a/src/assets/style/workspace.scss
+++ b/src/assets/style/workspace.scss
@@ -123,9 +123,12 @@
 }
 
 .is-3rem-footer {
-  // height: 3rem !important;
-  margin-bottom: 0.7rem;
-  margin-top: auto;
+  margin-bottom: 0.5rem;
+  margin-top: 0.3rem;
+}
+
+.is-no-top-margin-footer {
+  margin-top: 0;
 }
 
 .connection-closedsocket {
